fix dark mode for a link (#26298)

--- a/shared/common-adapters/text.css
+++ b/shared/common-adapters/text.css
@@ -72,8 +72,9 @@
 .text_BodySmallItalic,
 .text_BodySmallExtrabold,
 .text_BodySmallSemiboldItalic,
-.text_BodySmallSecondaryLink,
 .text_BodySmallExtraboldSecondaryLink,
+.text_BodySmallSecondaryLink,
+.text_BodySmallSemiboldSecondaryLink,
 .text_BodyTiny,
 .text_BodyTinyLink,
 .text_BodyTinyBold,
